--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -1,4 +1,7 @@
 aside#right
+  #info
+    image(src="stylesheets/images/icon.png")
+    div geraldchen890806@gmail.com
   #recent
     h4.title 最新文章
     ul
