--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -103,6 +103,10 @@ body {
         font-size: 20px;
       }
 
+      #info {
+        text-align: center;
+      }
+
       li {
         padding: 5px;
         a {
@@ -116,7 +120,7 @@ body {
         }
       }
 
-      .item {
+      .item, #recent {
         margin-top: 20px;
         li {
           display: inline-block;
