--- a/app/views/home/about.jade
+++ b/app/views/home/about.jade
@@ -4,8 +4,8 @@ block content
   .about 
     div 本网站为学习nodejs创建，正在不停完善中 项目地址https://github.com/geraldchen890806/blog_nodejs
     br
-    div 推荐一个程序员拍卖网站^_^ http://100offer.com/i/ZS5tiqnh
+    div 推荐一个程序员拍卖网站 ^_^
+      a(href="http://100offer.com/i/ZS5tiqnh") 100offer
     br
-    div.info
-        image(src="stylesheets/images/icon.png")
-        div geraldchen890806@gmail.com
+    div 推荐一个chrome翻墙插件 ^_^
+      a(href="http://100offer.com/i/ZS5tiqnh") 红杏出墙
