--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -138,13 +138,8 @@ body {
     padding: 30px 30px 50px;
     min-height: 600px;
     position: relative;
-    .info {
-      position: absolute;
-      top: 25px;
-      right: 28px;
-      div {
-        padding: 5px 0;
-      }
+    a {
+      color: #258fb8;
     }
   }
   /*#main{
