--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -1,6 +1,6 @@
 aside#right
   #info
-    image(src="stylesheets/images/icon.png")
+    image(src="/stylesheets/images/icon.png")
     div geraldchen890806@gmail.com
   #recent
     h4.title 最新文章
