--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -9,7 +9,7 @@ html
     meta(name="description", content="人生是一场独自修行的道路--前端开发修炼之路- http://renjm.com")
     meta(name="keywords",content="#{keys}")
     meta(name="google-site-verification", content="PPHSoBGy6QnFVSSdV0lOm37TmkhfMa1UpVLW8zcrauI")
-    meta(name="viewport",content="width=device-width")
+    meta(name="viewport",content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1.0, user-scalable=yes, minimal-ui")
   body
     .top
       if !session || !session.login
