--- a/public/stylesheets/plugin.less
+++ b/public/stylesheets/plugin.less
@@ -5,10 +5,15 @@
 .dropdown .dropdown-toggle:focus {border-color: #5599DD}
 .dropdown .dropdown-toggle:active, .open .dropdown-toggle { outline: 0;}
 .dropdown .dropdown-menu { position: absolute;top: 100%;left: 0;z-index: 1000;display: none;float: left;width: 153px;padding: 5px 0;margin: 2px 0 0;list-style: none;background-color: white;border: 1px solid #5599DD;-webkit-background-clip: padding-box;-moz-background-clip: padding;background-clip: padding-box;}
-.dropdown .dropdown-menu li { padding:0 5px;}
+.dropdown .dropdown-menu li { padding:0 5px; position: relative;}
+.dropdown .dropdown-menu li .octicon-trashcan { display: none;  position: absolute; right: 6px; top: 5px;}
+.dropdown .dropdown-menu li:hover .octicon-trashcan { display: inline-block;}
+
 .dropdown #newTag { width:100px;}
 .dropdown .btn { height: auto;width: 38px;line-height: normal;padding: 2px;margin-left: 3px;}
 .dropdown .octicon { float: right;cursor: pointer;}
+
+
 .editor{
   border: 1px solid #ddd;
   width: 700px;
