--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title #{title} 修 - renjm.com
+    title #{title} GeraldChen's Blog
     link(rel="stylesheet", href='/stylesheets/plugins.min.css', type="text/css")
     link(rel="stylesheet", href='/stylesheets/blog.min.css', type="text/css")
     meta(charset="UTF-8")
@@ -22,7 +22,7 @@ html
     header.layout-header
       hgroup
         h1
-          a(href="/", title="修") 修 - renjm.com
+          a(href="/", title="修") GeraldChen's Blog
         h5 人生是一场独自修行的道路
     nav
       ul
