add link to adrian hwang

--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -21,6 +21,8 @@ aside#right
         a(href="http://www.jiweiwei.com/") 众生相
       li
         a(href="http://blog.samsonis.me/") Samson's Weblog
+      li
+        a(href="http://www.adrian-run.com/") Adrian Hwang
   #share.item
     ul
       li
